package com.casasnuevas.backend.appointment.model;

import com.casasnuevas.backend.client.model.Client;
import com.casasnuevas.backend.common.model.BaseEntity;
import com.casasnuevas.backend.property.model.Property;
import com.casasnuevas.backend.user.model.User;
import jakarta.persistence.*;
import lombok.*;
import org.hibernate.annotations.ColumnDefault;
import org.hibernate.annotations.SQLRestriction;

import java.time.LocalDateTime;

@Getter
@Setter
@Builder
@NoArgsConstructor
@AllArgsConstructor
@Entity
@Table(name = "appointments")
@SQLRestriction("deleted_at IS NULL")
public class Appointment extends BaseEntity {

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "property_id", nullable = false)
    private Property property;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "client_id", nullable = false)
    private Client client;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "agent_id", nullable = false)
    private User agent;

    @Column(name = "scheduled_at", nullable = false)
    private LocalDateTime scheduledAt;

    /** Duración en minutos (para solapes y vista tipo calendario). Requiere DEFAULT en BD para filas ya existentes. */
    @Builder.Default
    @ColumnDefault("60")
    @Column(name = "duration_minutes", nullable = false)
    private int durationMinutes = 60;

    @Enumerated(EnumType.STRING)
    @Column(name = "status", nullable = false)
    private AppointmentStatus status;

    @Column(name = "notes", columnDefinition = "TEXT")
    private String notes;

    @Column(name = "deleted_at")
    private LocalDateTime deletedAt;

    public enum AppointmentStatus {
        PENDING, CONFIRMED, CANCELLED, DONE
    }
}